changed styling to prevent overlapping of content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,17 @@ div#map {min-height: 360px;}
 .room-features{
     column-count: 2;
     list-style-type: none;
+    padding-bottom:10px;
 }
+.company-name{
+    padding-top:20px;
+    padding-left:20px;
+    text-align:center;
+}
+
 /*------------------------------------------------------------------ Hotels*/
 .hotel{
-    padding-bottom:80px;
+    padding-bottom:20px;
     padding-right:20px;
     padding-left:20px;
 }
@@ -28,32 +35,6 @@ div#map {min-height: 360px;}
     padding-top:20px;
     padding-bottom:20px;
     font-family: 'Roboto Slab', serif;
-}
-
-.carousel{
-    width:600px;
-    height:225px;
-    padding-top:20px;
-}
-
-@media (min-width: 768px) {
-    .carousel{
-        padding-bottom:500px;
-    }
- }
-
-@media (min-width: 576px) { 
-     .carousel{
-        padding-bottom:350px;
-    }
- }
-
-
-
-.carousel-item{}
-
-.room-features{
-    padding-bottom:10px;
 }
 
 .hotel-name{
@@ -65,15 +46,15 @@ div#map {min-height: 360px;}
 }
 
 .room-price{
-padding-top:20px;
-text-align:center;
+padding-top:10px;
+text-decoration: bold;
 font-family: 'Roboto Slab', serif;
 }
 
 .fa-star{
     padding-top:10px;
 }
-/*------------------------------------------------------------------ Hotels*/
+
 
 .location-summary{
     padding-left:10px;
@@ -86,15 +67,21 @@ font-family: 'Roboto Slab', serif;
 .location-info{
     padding-top:20px;
     padding-left:30px;
-
 }
 
+
+/*------------------------------------------------------------------ Carousel*/
 .carousel-item{
    padding-left:20px;
    padding-right:20px;
 }
 
+.carousel{
+    width:600px;
+    padding-top:70px;
+}
 
+/*------------------------------------------------------------------ Carousel*/
 .social-links
 {
    font-size:40px;
